Clarify T and speedup baseline in abstract

--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -98,7 +98,7 @@
 
 
 \begin{abstract}
-Autoregressive decoding in large language models (LLMs) is fundamentally sequential and therefore underutilizes modern accelerator parallelism during token generation. Speculative decoding mitigates this bottleneck by letting a lightweight draft model propose multiple tokens that are verified in parallel by the target model; however, linear variants explore only a single draft chain per step and can waste substantial computation when early tokens are rejected, while existing tree-based approaches often employ \emph{fixed} structures that cannot adapt to varying draft model confidence. We propose \textbf{DynaTree}, a training-free tree-based speculative decoding framework with \emph{confidence-aware} adaptive drafting that dynamically adjusts tree breadth and depth under an explicit node budget, combined with probability-threshold pruning to strictly manage computational overhead. In the greedy-decoding setting, DynaTree is exact: it generates the same token sequence as the target model (no distributional bias). Experiments with Pythia-2.8B (target) and Pythia-70M (draft) show that DynaTree improves throughput over autoregressive decoding, linear speculative decoding, and tuned fixed-tree baselines on both WikiText-2 and PG-19. At \(T=1500\), DynaTree reaches 219.5~tokens/s on WikiText-2 (1.64$\times$) and 194.9~tokens/s on PG-19 (1.70$\times$).
+Autoregressive decoding in large language models (LLMs) is fundamentally sequential and therefore underutilizes modern accelerator parallelism during token generation. Speculative decoding mitigates this bottleneck by letting a lightweight draft model propose multiple tokens that are verified in parallel by the target model; however, linear variants explore only a single draft chain per step and can waste substantial computation when early tokens are rejected, while existing tree-based approaches often employ \emph{fixed} structures that cannot adapt to varying draft model confidence. We propose \textbf{DynaTree}, a training-free tree-based speculative decoding framework with \emph{confidence-aware} adaptive drafting that dynamically adjusts tree breadth and depth under an explicit node budget, combined with probability-threshold pruning to strictly manage computational overhead. In the greedy-decoding setting, DynaTree is exact: it generates the same token sequence as the target model (no distributional bias). Experiments with Pythia-2.8B (target) and Pythia-70M (draft) show that DynaTree improves throughput over autoregressive decoding, linear speculative decoding, and tuned fixed-tree baselines on both WikiText-2 and PG-19. For generation length \(T=1500\) new tokens, DynaTree reaches 219.5~tokens/s on WikiText-2 and 194.9~tokens/s on PG-19, corresponding to 1.64$\times$ and 1.70$\times$ speedup over target-model autoregressive greedy decoding, respectively.
 \end{abstract}
 
 
