--- a/NeurIPS模板/references.bib
+++ b/NeurIPS模板/references.bib
@@ -230,10 +230,10 @@
 @misc{eagle,
   title={EAGLE: Speculative Sampling Requires Rethinking Feature Uncertainty}, 
   author={Yuhui Li and Fangyun Wei and Chao Zhang and Hongyang Zhang},
-  year={2024},
+  year={2025},
   eprint={2401.15077},
   archivePrefix={arXiv},
-  primaryClass={cs.CL},
+  primaryClass={cs.LG},
   url={https://arxiv.org/abs/2401.15077}, 
 }
 
